backup-minio/ingress-backup-minio.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-backup-minio
  namespace: backup-minio
spec:
  selector: release == 'backup-minio'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 9000
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'gitlab'
        selector: job == 'gitlab-backup-mirror'
      destination:
        ports:
          - 9000
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: k8up == 'backup-enabled'
        selector: baasresource == 'true'
      destination:
        ports:
          - 9000
